modified chopper/editor template to fit the new editor code

--- a/templates/chopper/chopper_tmplt.html
+++ b/templates/chopper/chopper_tmplt.html
@@ -49,11 +49,16 @@
           jQuery.entityFixer.sessionId = '%(sessionid)s';
           jQuery.entityFixer.instId = '%(instanceid)s';
           jQuery.entityFixer.identifier = '%(identifier)s';
+          jQuery.cifEdit.processing_site = '%(processing_site)s';
+          jQuery.cifEdit.ccModuleFlag = false;
           var cifUrl = '%(comp)s';
 
      	  $('#chemWin1').chemWin({edit:{posy:100,width:700},jmol:{posy:100,posx:715,width:600},
                                   file:{posx:10,posy:645,width:1300,height:200/*hide:true*/},         	  
                                       comp:{hide:true},
+                                      audit:{hide:true},
+                                      synonym:{hide:true},
+                                      related:{hide:true},
          	                      atoms:{posx:10,posy:890,width:1300,height:200/*,hide:true*/},
          	                      bonds:{posx:10,posy:1135,width:1300,height:200/*,hide:true*/},
          	                      view:{diagram:{edit:{lock:true},readOnly:true},
@@ -67,7 +72,7 @@
          	                                           $('#uploadCifButton_chemWin1').click(function(){jQuery.chemChopper.enableChop("chemWin1")});
                                         jQuery.chemWin.loadCifUrl('chemWin1', cifUrl, 'abc');
                                         var nId = 1;
-                                        jQuery.chemViews.cifEditControls('chemWin'+nId,{NewCode:true,Update:true,CheckDuplicate:true,Audit:true});
+                                        jQuery.chemViews.cifEditControls('chemWin'+nId,{NewCode:false,Update:false,CheckDuplicate:false,Audit:false});
          	                                           }});      	      	  
         });       
     </script>
