added editable pdbx_chem_comp_atom_related

--- a/templates/chopper/chopper_tmplt.html
+++ b/templates/chopper/chopper_tmplt.html
@@ -59,6 +59,7 @@
                                       audit:{hide:true},
                                       synonym:{hide:true},
                                       related:{hide:true},
+                                      relatedatom:{hide:true},
          	                      atoms:{posx:10,posy:890,width:1300,height:200/*,hide:true*/},
          	                      bonds:{posx:10,posy:1135,width:1300,height:200/*,hide:true*/},
          	                      view:{diagram:{edit:{lock:true},readOnly:true},
