--- a/templates/chopper/editor_tmplt.html
+++ b/templates/chopper/editor_tmplt.html
@@ -81,12 +81,14 @@ $(document).ready(function() {
            file:{posx:2,posy:1900,width:1200,height:150}, 
            synonym:{posx:2,posy:2095,width:1200,height:200},
            related:{posx:2,posy:2340,width:1200,height:200},
+           relatedatom:{posx:2,posy:2585,width:1200,height:200},
            view:{compModel:jQuery.cifEdit.compCompModel,
                  atomModel:jQuery.cifEdit.compAtomModel,
                  bondModel:jQuery.cifEdit.compBondModel,
                  auditModel:jQuery.cifEdit.compAuditModel,
                  synonymModel:jQuery.cifEdit.compSynonymModel,
                  relatedModel:jQuery.cifEdit.compRelatedModel,
+                 relatedAtomModel:jQuery.cifEdit.atomRelatedModel,
                  hydrogensjmm:false,
                  hydrogensjm:false,
                  jmolMode:'3di',
@@ -98,7 +100,7 @@ $(document).ready(function() {
               jQuery.chemWin.loadCifUrl('chemWin',cifUrl,instanceId);
               $('#chemWinLoading').hide();
               $('#help_link').html('<span style="display:inline;" class="ui-icon ui-icon-info">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>');
-              var wnds=["Edit","Comp","Jmolm","Jmol","Atoms","Bonds","Audit","File","Synonym","Related"];
+              var wnds=["Edit","Comp","Jmolm","Jmol","Atoms","Bonds","Audit","File","Synonym","Related","RelatedAtom"];
               var wpos={Jmolm:"top",Jmol:"top"};
               var wwdth={Comp:300,Jmolm:300,Jmol:300};
               var iconWinFocus=function(wm){
@@ -161,7 +163,7 @@ $(document).ready(function() {
 <!-- #mainContent ends above -->
 <!-- #footer begins -->
 	<br/>
-	<div style="margin-top:2455px" id="footer">
+	<div style="margin-top:2700px" id="footer">
    		<p>&copy; 2019 wwPDB Chemical Component Editor Module Editor V0.01</p>
 	</div>
 <!-- #footer ends above -->
