transformer module improvements

--- a/templates/summary_view/expand_list_tmplt.html
+++ b/templates/summary_view/expand_list_tmplt.html
@@ -1,4 +1,5 @@
-<a id="%(id)s" class="jshead ui-corner-all" href="#"><span class="ui-icon fltlft ui-icon-circle-arrow-e"></span> %(text)s </a>
-<ul style="display:none">
+<a id="%(id)s" class="jshead ui-corner-all" href="#"><span class="ui-icon fltlft %(arrow)s"></span> %(text)s </a>
+<ul style="display:%(display)s;">
+%(image2d)s
 %(list)s
 </ul>
