removed the warning message

--- a/templates/summary_view/prd_summary_tmplt.html
+++ b/templates/summary_view/prd_summary_tmplt.html
@@ -69,7 +69,7 @@ $(document).ready(function() {
                         dataType: 'json',
                         success: function(jsonOBJ) {
                             if (!jsonOBJ.errorflag) {
-                                 alert("Work will be saved");
+                                 // alert("Work will be saved");
                                  closeWindow();
                             } else {
                                  alert(jsonOBJ.errortext);
