edited various wording

--- a/templates/update_form/split_polymer_tmplt.html
+++ b/templates/update_form/split_polymer_tmplt.html
@@ -35,7 +35,7 @@
              <ul>
                  <li> Mouseover 1-letter code to show 3-letter code and residue position in sequence (not the actual residue number in coordinate).
                  <li> Click a 1-letter code to create break point between current and next residues for spliting.
-                 <li> Click "Delete" button to remove the break point.
+                 <li> Click "Remove" button to remove the current break point or click "Remove All" button to remove all break point(s).
              </ul>
          </span>
 
