check in various changes

--- a/templates/chopper/chopper_tmplt.html
+++ b/templates/chopper/chopper_tmplt.html
@@ -33,6 +33,7 @@
 
     <script type="text/javascript" src="/chemeditor/jquery.chemViews.js"> </script>
     <script type="text/javascript" src="/chemeditor/jquery.chemAjax.js"> </script>
+    <script type="text/javascript">jQuery.chemAjax.getEnumeration();</script>
     <script type="text/javascript" src="/chemeditor/jquery.chemWin.js"> </script>
     <script type="text/javascript" src="/chemeditor/jquery.cifEdit.js"> </script>
     <script type="text/javascript" src="/chemeditor/jquery.chemChopper.js"> </script>
@@ -58,6 +59,7 @@
                                       comp:{hide:true},
                                       audit:{hide:true},
                                       synonym:{hide:true},
+                                      feature:{hide:true},
                                       related:{hide:true},
                                       relatedatom:{hide:true},
          	                      atoms:{posx:10,posy:890,width:1300,height:200/*,hide:true*/},
