--- a/templates/summary_view/str_summary_tmplt.html
+++ b/templates/summary_view/str_summary_tmplt.html
@@ -82,9 +82,7 @@ $(document).ready(function() {
     <tr>
         <td style="border-style:none"> <input style="background-color:#CEECF5" type = "submit" name = "submit" value = "Merge to polymer" /> </td>
         <td style="border-style:none"> <input style="background-color:#CEECF5" type = "submit" name = "submit" value = "Split polymer to polymer(s)/non-polymer(s)" /> </td>
-<!--
-        <td style="border-style:none"> <input style="background-color:#CEECF5" type = "submit" name = "submit" value = "Edit polymer sequence(s)" /> </td>
--->
+        <td style="border-style:none"> <input style="background-color:#CEECF5" type = "submit" name = "submit" value = "Remove residue(s) from polymer sequence(s)" /> </td>
         <td style="border-style:none"> <input style="background-color:#CEECF5" type = "submit" name = "submit" value = "Merge/Split with chopper" /> </td>
         <td style="border-style:none"> <input style="background-color:#CEECF5" type = "submit" name = "submit" value = "Merge to ligand" /> </td>
     </tr>
