--- a/templates/update_form/merge_polymer_tmplt.html
+++ b/templates/update_form/merge_polymer_tmplt.html
@@ -107,7 +107,7 @@ merges to polymer with order of chain A, residue C_HIS_8_, residue C_HIS_9_, res
 
 <table>
     <tr>
-        <td style="border-style:none"> <input type = 'submit' name = 'submit' value = 'Merge to polymer' /> </td>
+        <td style="border-style:none"> <input style="background-color:#CEECF5" type = 'submit' name = 'submit' value = 'Merge to polymer' /> </td>
     </tr>
 </table>
 
