--- a/templates/update_form/row_input_tmplt.html
+++ b/templates/update_form/row_input_tmplt.html
@@ -3,6 +3,8 @@
 
     <td style="text-align:left"> %(sequence)s </td>
 
+    <input type="hidden" name="%(id)s" value="%(value)s"/>
+<!--
     <td style="text-align:center">
          <input type="radio" name="%(id)s" value="%(value)s"/>
          <span class="warninfo"><a href="#" title="apply changes to coordinates and header" onclick="return false">Coordinates & annotation remarks</a></span>
@@ -10,7 +12,7 @@
          <input type="radio" name="%(id)s" value="%(value)s,only"/>
          <span class="warninfo"><a href="#" title="apply changes to header only" onclick="return false">Annotation remarks</a></span>
     </td>
-
+-->
     <td style="text-align:center">
        <input type="text" name="%(user_defined_id)s" size="15" />
     </td>
