--- a/templates/chopper/editor_tmplt.html
+++ b/templates/chopper/editor_tmplt.html
@@ -35,6 +35,7 @@
 <script type="text/javascript" src="/ccmodule/editor/jquery.objectEdit.js"> </script>
 <script type="text/javascript" src="/ccmodule/editor/jquery.chemViews.js"> </script>
 <script type="text/javascript" src="/ccmodule/editor/jquery.chemAjax.js"> </script>
+<script type="text/javascript">jQuery.chemAjax.getEnumeration();</script>
 <script type="text/javascript" src="/ccmodule/editor/jquery.chemWin.js"> </script>
 <script type="text/javascript" src="/ccmodule/editor/jquery.cifEdit.js"> </script>
 
@@ -80,13 +81,15 @@ $(document).ready(function() {
            audit:{posx:2,posy:1655,width:1200,height:200},
            file:{posx:2,posy:1900,width:1200,height:150}, 
            synonym:{posx:2,posy:2095,width:1200,height:200},
-           related:{posx:2,posy:2340,width:1200,height:200},
-           relatedatom:{posx:2,posy:2585,width:1200,height:200},
+           feature:{posx:2,posy:2340,width:1200,height:200},
+           related:{posx:2,posy:2585,width:1200,height:200},
+           relatedatom:{posx:2,posy:2830,width:1200,height:200},
            view:{compModel:jQuery.cifEdit.compCompModel,
                  atomModel:jQuery.cifEdit.compAtomModel,
                  bondModel:jQuery.cifEdit.compBondModel,
                  auditModel:jQuery.cifEdit.compAuditModel,
                  synonymModel:jQuery.cifEdit.compSynonymModel,
+                 featureModel:jQuery.cifEdit.compFeatureModel,
                  relatedModel:jQuery.cifEdit.compRelatedModel,
                  relatedAtomModel:jQuery.cifEdit.atomRelatedModel,
                  hydrogensjmm:false,
@@ -100,7 +103,7 @@ $(document).ready(function() {
               jQuery.chemWin.loadCifUrl('chemWin',cifUrl,instanceId);
               $('#chemWinLoading').hide();
               $('#help_link').html('<span style="display:inline;" class="ui-icon ui-icon-info">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>');
-              var wnds=["Edit","Comp","Jmolm","Jmol","Atoms","Bonds","Audit","File","Synonym","Related","RelatedAtom"];
+              var wnds=["Edit","Comp","Jmolm","Jmol","Atoms","Bonds","Audit","File","Synonym","Feature","Related","RelatedAtom"];
               var wpos={Jmolm:"top",Jmol:"top"};
               var wwdth={Comp:300,Jmolm:300,Jmol:300};
               var iconWinFocus=function(wm){
