check in various changes

--- a/templates/update_form/update_header_tmplt.html
+++ b/templates/update_form/update_header_tmplt.html
@@ -15,7 +15,8 @@
     <td style="text-align:left;border-style:none"><span style="font-weight:bold">Sequence/Residue:</span></td>
     <td style="text-align:left;border-style:none" colspan="3">%(sequence)s</td>
 </tr>
-
+<input type="hidden" name="%(id)s" value="%(value)s"/>
+<!--
 <tr>
     <td style="text-align:left;border-style:none"><span style="font-weight:bold">Update Type:</span></td>
     <td style="text-align:left;border-style:none" colspan="3">
@@ -26,3 +27,4 @@
          <span class="warninfo"><a href="#" title="apply changes to header only" onclick="return false">Annotation remarks</a></span> 
     </td>
 </tr>
+-->
