--- a/templates/update_form/update_user_input_tmplt.html
+++ b/templates/update_form/update_user_input_tmplt.html
@@ -52,9 +52,9 @@ $(document).ready(function() {
 
             <table>
                 <tr>
-                    <td style="border-style:none" colspan="4">
-                        <input type = "submit" value = "Update" />  &nbsp; &nbsp; &nbsp; &nbsp;
-                        <input type = "reset" value = "Clear radio button" />
+                    <td style="border-style:none" colspan="3">
+                        <input type = "submit" value = "Update" />  <!--  &nbsp; &nbsp; &nbsp; &nbsp;
+                        <input type = "reset" value = "Clear radio button" /> -->
                     </td>
                 </tr>
 
@@ -66,19 +66,21 @@ $(document).ready(function() {
                 <tr>
                     <th>Instance ID</th>
                     <th>Sequence/Residue</th>
+<!--
                     <th>Update Type</th>
+-->
                     <th>Component or PRD ID</th>
                 </tr>
 %(form_data)s
 
                 <tr>
-                    <td style="border-style:none" colspan="4">&nbsp; &nbsp; &nbsp; &nbsp;</td>
+                    <td style="border-style:none" colspan="3">&nbsp; &nbsp; &nbsp; &nbsp;</td>
                 </tr>
 
                 <tr>
-                    <td style="border-style:none" colspan="4">
-                        <input type = "submit" value = "Update" />  &nbsp; &nbsp; &nbsp; &nbsp;
-                        <input type = "reset" value = "Clear radio button" />
+                    <td style="border-style:none" colspan="3">
+                        <input type = "submit" value = "Update" />  <!-- &nbsp; &nbsp; &nbsp; &nbsp;
+                        <input type = "reset" value = "Clear radio button" /> -->
                     </td>
                 </tr>
             </table>
