--- a/templates/summary_view/str_summary_tmplt.html
+++ b/templates/summary_view/str_summary_tmplt.html
@@ -53,8 +53,8 @@ $(document).ready(function() {
               This page provides you summary information about entity, polymer and non-polymer:
              <ol>
                  <li> For "Merge to polymer" and "Merge/Split with chopper" options, please use Chain ID and/or Ligand ID selections.
-                 <li> For "Split polymer to polymer(s)/non-polymer(s)" option, please use Entity ID selection. You can select multiple
-                      entities and split them at same time.
+                 <li> For "Split polymer to polymer(s)/non-polymer(s)" and "Remove residue(s) from polymer sequence(s)" options, please
+                      use Entity ID selection. You can select multiple entities and split them at same time.
                  <li> For "Merge to polymer" option, multiple groups can be merged at same time with appropriate group ID information.
                       If no group ID defined, all selected polymer chain(s) and non-polymer residue(s) will be merged into a single polymer.
                  <li> For "Merge/Split with chopper" option, only one group can be processed at each time. All selected polymer chain(s)
