--- a/templates/chopper/chopper_tmplt.html
+++ b/templates/chopper/chopper_tmplt.html
@@ -46,6 +46,7 @@
     </style>
 
     <script type="text/javascript">
+       var contentSize = 0;
        $(document).ready(function(){
           jQuery.entityFixer.sessionId = '%(sessionid)s';
           jQuery.entityFixer.instId = '%(instanceid)s';
@@ -76,6 +77,22 @@
                                         jQuery.chemWin.loadCifUrl('chemWin1', cifUrl, 'abc');
                                         var nId = 1;
                                         jQuery.chemViews.cifEditControls('chemWin'+nId,{NewCode:false,Update:false,CheckDuplicate:false,Audit:false});
+
+                                        if ($('#chemBonds_chemWin1_window').length) {
+                                                contentSize += $('#chemBonds_chemWin1_window').position().top +
+                                                $('#chemBonds_chemWin1_window').height() +
+                                                $('.window-titleBar').height() +
+                                                $('.window-statusBar').height() + 10;
+
+                                                $('#footerToolbar').css('top', contentSize + 'px');
+                                                $('#footer').css('margin-top', contentSize + 'px');
+                                        } else {
+                                                // if we don't find the RelatedAtom window, instead of placing the
+                                                // button relative to the windows, we place it relative to the top
+                                                // of the page, as it is done with the footer itself
+                                                $('#footerToolbar').css('margin-top', '2650px');
+                                        }
+                                        
          	                                           }});      	      	  
         });       
 
@@ -201,5 +218,7 @@ jQuery.chemChopper.addNewChemWin=function(mol) {
    </div>                        
       <div class="chemWin" id="chemWin1"></div>
    </div>   
+
+   <div style="position: absolute; left:2px;" id="footerToolbar"></div>
  </body>
 </html>
