removed http://prd.rutgers.edu link

--- a/templates/result_view/row_with_prdid_tmplt.html
+++ b/templates/result_view/row_with_prdid_tmplt.html
@@ -1,6 +1,6 @@
 <tr>
     <td style="text-align:left">
-       <a href="http://prd.rutgers.edu/service/prd/report?prdId=%(prdid)s&format=html" target="_blank"> %(prdid)s (%(pstatus)s) </a>
+       <!-- <a href="http://prd.rutgers.edu/service/prd/report?prdId=%(prdid)s&format=html" target="_blank"> --> %(prdid)s (%(pstatus)s) <!-- </a> -->
     </td>
 
     <td style="text-align:left"> %(sequence)s </td>
