removed http://cc-tools.rutgers.edu hyperlink

--- a/templates/update_form/row_prdid_ccid_tmplt.html
+++ b/templates/update_form/row_prdid_ccid_tmplt.html
@@ -1,6 +1,6 @@
 <tr>
     <td style="text-align:left">
-       <a href="http://cc-tools.rutgers.edu/pyapps/ccHandler.py?formid=ccview&idcodes=%(ccid)s" target="_blank"> %(ccid)s (%(cstatus)s) </a> /
+       <!-- <a href="http://cc-tools.rutgers.edu/pyapps/ccHandler.py?formid=ccview&idcodes=%(ccid)s" target="_blank"> -->  %(ccid)s (%(cstatus)s) <!-- </a> --> /
        <!-- <a href="http://prd.rutgers.edu/service/prd/report?prdId=%(prdid)s&format=html" target="_blank"> --> %(prdid)s (%(pstatus)s) <!-- </a> -->
     </td>
 
