--- a/templates/result_view/row_with_ccid_tmplt.html
+++ b/templates/result_view/row_with_ccid_tmplt.html
@@ -1,6 +1,6 @@
 <tr>
     <td style="text-align:left">
-       <a href="http://cc-tools.rutgers.edu/pyapps/ccHandler.py?formid=ccview&idcodes=%(ccid)s" target="_blank"> %(ccid)s (%(cstatus)s) </a>
+       <!-- <a href="http://cc-tools.rutgers.edu/pyapps/ccHandler.py?formid=ccview&idcodes=%(ccid)s" target="_blank"> --> %(ccid)s (%(cstatus)s) <!-- </a> -->
     </td>
 
     <td style="text-align:left"> %(sequence)s </td>
