--- a/templates/update_form/update_merge_polymer_residue_match_row_tmplt.html
+++ b/templates/update_form/update_merge_polymer_residue_match_row_tmplt.html
@@ -1,7 +1,7 @@
 <tr>
     <td style="text-align:left" colspan="3">
        <input type="radio" name="%(match_id)s" value="%(selection)s" /> &nbsp; &nbsp; &nbsp; 
-       <a href="http://cc-tools.rutgers.edu/pyapps/ccHandler.py?formid=ccview&idcodes=%(ccid)s" target="_blank"> %(ccid)s (%(cstatus)s) </a>
+       <!-- <a href="http://cc-tools.rutgers.edu/pyapps/ccHandler.py?formid=ccview&idcodes=%(ccid)s" target="_blank"> --> %(ccid)s (%(cstatus)s) <!-- </a> -->
     </td>
     <td style="text-align:center"> %(value)s </td>
     <td style="text-align:center">
