--- a/templates/summary_view/split_polymer_residue_input_tmplt.html
+++ b/templates/summary_view/split_polymer_residue_input_tmplt.html
@@ -38,7 +38,7 @@ $(document).ready(function() {
           <div id="logo"><img src="/images/wwpdb_logo.gif" width="187" height="58" alt="logo" />
           </div>
           <div id="headerCont">
-               <h1>Non Standard Polymer Residue Summary for Entry %(pdbid)s / %(identifier)s </h1>
+               <h1>Split Non Standard Polymer Residue for Entry %(pdbid)s / %(identifier)s </h1>
           </div>
           <br class="clearfloat" />
      </div>
@@ -49,9 +49,8 @@ $(document).ready(function() {
          <h4>PDB ID : &nbsp;&nbsp;&nbsp;&nbsp; <span style="font-weight: normal;">%(pdbid)s</span> &nbsp;&nbsp;&nbsp;&nbsp;
                       DEPOSITION ID : &nbsp;&nbsp;&nbsp;&nbsp; <span style="font-weight: normal;">%(identifier)s</span> </h4>
                                <h4>Entry Title : &nbsp;&nbsp;&nbsp;&nbsp;<span style="font-weight: normal;">%(title)s</span></h4>
-
          <br/>
-         <h4><span style="font-weight: normal;">Select the residue and click the "Split with chopper" button to start the process.</span></h4>
+         <h4><span style="font-weight: normal;">Input the residue information and click the "Split with chopper" button to start the process.</span></h4>
 
 <form method="post" action="/service/entity/launch_fixer" target="_blank">
 <input type="hidden" name="sessionid" value="%(sessionid)s" />
@@ -59,12 +58,15 @@ $(document).ready(function() {
 <input type="hidden" name="pdbid" value="%(pdbid)s" />
 
 <table>
-<tr><td style="border-style:none" colspan="6"> <input style="background-color:#CEECF5" type = "submit" name = "submit" value = "Split with chopper" /></td></tr>
-<tr><td style="border-style:none" colspan="6"> &nbsp; </td></tr>
-<tr><th>Selection</th><th>PDB Chain ID</th><th>Residue Name</th><th>Residue Number</th><th>Insert Code</th><th>3D View</th></tr>
-%(form_data)s
-<tr><td style="border-style:none" colspan="6"> &nbsp; </td></tr>
-<tr><td style="border-style:none" colspan="6"> <input style="background-color:#CEECF5" type = "submit" name = "submit" value = "Split with chopper" /></td></tr>
+<tr><td style="border-style:none" colspan="4"> <input style="background-color:#CEECF5" type = "submit" name = "submit" value = "Split with chopper" /></td></tr>
+<tr><td style="border-style:none" colspan="4"> &nbsp; </td></tr>
+<tr><th>PDB Chain ID</th><th>Residue Name</th><th>Residue Number</th><th>Insert Code</th></tr>
+<tr><td><input style="background-color:#CEF5DB" type="text" name="chain_id" size="10" /></td>
+    <td><input style="background-color:#CEF5DB" type="text" name="res_name" size="10" /></td>
+    <td><input style="background-color:#CEF5DB" type="text" name="res_num" size="10" /></td>
+    <td><input style="background-color:#CEF5DB" type="text" name="ins_code" size="10" /></td></tr>
+<tr><td style="border-style:none" colspan="4"> &nbsp; </td></tr>
+<tr><td style="border-style:none" colspan="4"> <input style="background-color:#CEECF5" type = "submit" name = "submit" value = "Split with chopper" /></td></tr>
 </table>
 
 </form>
