fixed tbe bug related to PCM

--- a/templates/chopper/editor_tmplt.html
+++ b/templates/chopper/editor_tmplt.html
@@ -82,14 +82,16 @@ $(document).ready(function() {
            audit:{posx:2,posy:1655,width:1200,height:200},
            file:{posx:2,posy:1900,width:1200,height:150}, 
            synonym:{posx:2,posy:2095,width:1200,height:200},
-           feature:{posx:2,posy:2340,width:1200,height:200},
-           related:{posx:2,posy:2585,width:1200,height:200},
-           relatedatom:{posx:2,posy:2830,width:1200,height:200},
+           pcm:{posx:2,posy:2340,width:1200,height:200},
+           feature:{posx:2,posy:2585,width:1200,height:200},
+           related:{posx:2,posy:2830,width:1200,height:200},
+           relatedatom:{posx:2,posy:3075,width:1200,height:200},
            view:{compModel:jQuery.cifEdit.compCompModel,
                  atomModel:jQuery.cifEdit.compAtomModel,
                  bondModel:jQuery.cifEdit.compBondModel,
                  auditModel:jQuery.cifEdit.compAuditModel,
                  synonymModel:jQuery.cifEdit.compSynonymModel,
+                 pcmModel:jQuery.cifEdit.pcmModel,
                  featureModel:jQuery.cifEdit.compFeatureModel,
                  relatedModel:jQuery.cifEdit.compRelatedModel,
                  relatedAtomModel:jQuery.cifEdit.atomRelatedModel,
