--- a/templates/chopper/chopper_tmplt.html
+++ b/templates/chopper/chopper_tmplt.html
@@ -43,6 +43,9 @@
     <style type="text/css"> 
        .ui-jqgrid-title, .ui-jqgrid-sortable, .ui-jqgrid-btable {font-size:13px;font-family:Sans-serif}
        .ui-jqgrid-btable {border:solid 1px gray}
+       input[type="text"] {background:white;font-family:"Courier New",Courier,monospace;font-size:12px;
+                           color:black;border-bottom:solid 1px #AAAAAA;border-right:solid 1px #AAAAAA;}
+       table td {text-align:left;}
     </style>
 
     <script type="text/javascript">
@@ -60,6 +63,7 @@
                                       comp:{hide:true},
                                       audit:{hide:true},
                                       synonym:{hide:true},
+                                      pcm:{hide:true},
                                       feature:{hide:true},
                                       related:{hide:true},
                                       relatedatom:{hide:true},
